[tool.poetry]
name = "srt_equalizer"
version = "0.1.3"
description = "Transform subtitle line lengths, splitting into multiple subtitle fragments if necessary. "
authors = ["Peter Krantz"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
srt = "^3.5.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"